--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    
+    <div class="container d-flex justify-content-center mt-5">
+        <h1 class="text-uppercase">griglia_<span>campo_minato</span> </h1>
+    </div>
 
     <script src="js/script.js"></script>
 </body>
