add structure html

--- a/index.html
+++ b/index.html
@@ -11,9 +11,18 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <div class="container d-flex justify-content-center mt-5">
-        <h1 class="text-uppercase">griglia_<span>campo_minato</span> </h1>
+    <div class="wrapper">
+
+        <div class="container h-100">
+            <h1 class="text-uppercase text-center">griglia_<span>campo_minato</span> </h1>
+            <div class="d-flex justify-content-center">
+                <div id="playground" class="mt-5"></div>
+                <button class="px-3 align-self-center">PLAY</button>
+            </div>
+        </div>
+        
     </div>
+
 
     <script src="js/script.js"></script>
 </body>
