add comments to js, updated size #playground

--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
 
         <div class="container h-100">
             <h1 class="text-uppercase text-center">griglia_<span>campo_minato</span> </h1>
-            <div class="d-flex justify-content-center">
-                <div id="playground" class="mt-5"></div>
+            <div class="d-flex justify-content-center m-5">
+                <div id="playground"></div>
                 <button class="px-3 align-self-center">PLAY</button>
             </div>
         </div>
-        
+
     </div>
 
 
