updated button into html, remove changelog to js

--- a/index.html
+++ b/index.html
@@ -17,7 +17,10 @@
             <h1 class="text-uppercase text-center">griglia_<span>campo_minato</span> </h1>
             <div class="d-flex justify-content-center m-5">
                 <div id="playground"></div>
-                <button class="px-3 align-self-center">PLAY</button>
+                <button class="px-3 align-self-center position-relative">
+                    <span>PLAY</span>
+                    <span class="d-block position-absolute bottom-0 ">Hello!</span>
+                </button>
             </div>
         </div>
 
