--- a/bonus/index.html
+++ b/bonus/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -7,9 +8,11 @@
     <link href="https://fonts.googleapis.com/css2?family=Pixelify+Sans&display=swap" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Griglia Campo Minato</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
     <div class="wrapper">
 
@@ -17,11 +20,23 @@
             <h1 class="text-uppercase text-center">griglia_<span>campo_minato</span> </h1>
             <div class="d-flex justify-content-center m-5">
                 <div id="playground"></div>
-                <button class="px-3 align-self-center position-relative">
-                    <span>PLAY</span>
-                    <span class="d-block position-absolute bottom-0 ">Hello!</span>
-                </button>
+                <div class="d-flex flex-column align-content-center justify-content-center align-items-center">
+                    <button class="px-3  position-relative">
+                        <span>PLAY</span>
+                        <span class="d-block position-absolute bottom-0 ">Hello!</span>
+                    </button>
+                    <form>
+                        <label for="level" class="d-block text-center">Livello:</label>
+                        <select name="level" id="level">
+                            <option value="">Facile</option>
+                            <option value="">Normale</option>
+                            <option value="">Difficile</option>
+                        </select>
+                    </form>
+                </div>
             </div>
+
+
         </div>
 
     </div>
@@ -29,4 +44,5 @@
 
     <script src="js/script.js"></script>
 </body>
+
 </html>
