--- a/bonus/index.html
+++ b/bonus/index.html
@@ -25,14 +25,14 @@
                         <span>PLAY</span>
                         <span class="d-block position-absolute bottom-0 ">Hello!</span>
                     </button>
-                    <form>
-                        <label for="level" class="d-block text-center">Livello:</label>
-                        <select name="level" id="level">
-                            <option value="">Facile</option>
-                            <option value="">Normale</option>
-                            <option value="">Difficile</option>
+                    <div>
+                        <label for="select" class="d-block text-center">Livello:</label>
+                        <select name="select" id="select">
+                            <option value="100">Facile</option>
+                            <option value="81">Normale</option>
+                            <option value="49">Difficile</option>
                         </select>
-                    </form>
+                    </div>
                 </div>
             </div>
 
