updated condition for select value

--- a/bonus/index.html
+++ b/bonus/index.html
@@ -28,9 +28,9 @@
                     <div>
                         <label for="select" class="d-block text-center">Livello:</label>
                         <select name="select" id="select">
-                            <option value="100">Facile</option>
-                            <option value="81">Normale</option>
-                            <option value="49">Difficile</option>
+                            <option value="easy">Facile</option>
+                            <option value="medium">Normale</option>
+                            <option value="hard">Difficile</option>
                         </select>
                     </div>
                 </div>
